# BrunellaAgentsSystem

./: .gitignore  AGENTS.md  PROJECT_OVERVIEW.md  README.md  WORKFLOW_STATUS.md  build-images.ps1  config.experimental.yaml  config.yaml  docker-compose.yml  main.py  project_status.md  run-stack.bat  run_server.py  stop-stack.bat  struktur.txt  tree.txt
.github/: copilot-instructions.md
_archive/: CRAWL_PHASE_IMPLEMENTATION_PLAN.md  FONTOS.md  WORKFLOW_STATUS.md  report09.15.new.md
backend/: .env.example  Dockerfile  langgraph.json  pyproject.toml  requirements.txt  run-backend.bat  test_coder_agent.py
backend/.venv311/: pyvenv.cfg
backend/.venv311/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
backend/examples/: cli_research.py
backend/scripts/: diagnose_cli.py  start_langgraph_dev.ps1
backend/src/: app.py  debug_chain.py  shell_debugger.py
backend/src/agent/: graph.py  state.py  tools.py
backend/src/specialists/: coder_agent.py
backend/src/specialists/research_agent/: graph.py
backend/tests/: test_api.py
backend/tests/agent/: test_agent_graph.py  test_graph.py  test_tools.py
backend/tests/specialists/: test_coder_agent.py
backend/tests/specialists/research_agent/: test_research_agent_graph.py  test_research_graph.py
doc/: Mermaid Chart-2025-09-04-015442.mmd  WORKFLOW.md  flowchart_TD.md
frontend/: Dockerfile
frontend/src/: App.tsx
